--- a/404.html
+++ b/404.html
@@ -51,13 +51,13 @@
     <!-- Start: Hero Parallax -->
     <section>
         <!-- Start: Parallax Background -->
-        <div style="height: 600px;background: url(&quot;assets/img/wave_bw.jpg&quot;) center / cover;">
+        <div style="height: 600px;">
             <div class="container h-100">
                 <div class="row h-100">
-                    <div class="col-md-6 text-center text-md-start d-flex d-sm-flex d-md-flex justify-content-center align-items-center justify-content-md-start align-items-md-center justify-content-xl-center">
-                        <div style="max-width: 350px;">
-                            <h1 class="text-uppercase fw-bold" style="color: #fff;">Hmmh...</h1>
-                            <h4 class="text-uppercase fw-bold" style="color: #fff;">We can't find that page.</h4>
+                    <div class="col-md-6 text-center text-md-start d-flex d-sm-flex d-md-flex justify-content-center align-items-center justify-content-md-start align-items-md-center justify-content-xl-center" style="color: rgb(0,0,0);">
+                        <div style="max-width: 350px;"><img src="assets/img/undraw_page_not_found_re_e9o6(2).svg" style="width: 70%;">
+                            <h1 class="text-uppercase fw-bold" style="color: #000000;">Hmm...</h1>
+                            <h4 class="text-uppercase fw-bold" style="color: #000000;">We can't find that page.</h4>
                         </div>
                     </div>
                 </div>
