--- a/impact.html
+++ b/impact.html
@@ -68,6 +68,14 @@
         <!-- Start: Stats -->
         <div class="container py-4 py-xl-5">
             <div class="row gy-4 row-cols-2 row-cols-md-4 justify-content-center">
+                <div class="col" style="text-align: center;"><img width="100%" height="100%" src="assets/img/undraw_connected_world_wuay.png"></div>
+                <div class="col text-start" style="color: var(--bs-dark);">
+                    <div class="text-start d-flex flex-column py-3" style="color: var(--bs-dark);">
+                        <p>Since 2019, we have been utilizing technology to spread God's Word. We utilize privacy respecting, anonymous technologies to record our impact.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row gy-4 row-cols-2 row-cols-md-4 justify-content-center">
                 <div class="col">
                     <div class="text-center d-flex flex-column justify-content-center align-items-center py-3">
                         <div class="bs-icon-xl bs-icon-circle d-flex flex-shrink-0 justify-content-center align-items-center d-inline-block mb-2 bs-icon lg"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-devices" style="color: var(--bs-dark);">
@@ -77,7 +85,7 @@
                                 <line x1="16" y1="9" x2="18" y2="9"></line>
                             </svg></div>
                         <div class="px-3" style="color: var(--bs-dark);">
-                            <h2 class="fw-bold mb-0" style="color: var(--bs-dark);">153,118+</h2>
+                            <h2 class="fw-bold mb-0" style="color: var(--bs-dark);">153,324+</h2>
                             <p class="mb-0" style="color: var(--bs-dark);">Views</p>
                         </div>
                     </div>
