--- a/ministryconnect.html
+++ b/ministryconnect.html
@@ -31,7 +31,7 @@
 </script>
 </head>
 
-<body style="font-family: Quicksand, sans-serif;">
+<body style="font-family: Quicksand, sans-serif;" onload="disableselect()">
     <!-- Start: Navbar Right Links (Dark) -->
     <nav class="navbar navbar-dark navbar-expand-md sticky-top bg-dark py-3">
         <div class="container"><a class="navbar-brand d-flex align-items-center" href="index.html"><span><img src="assets/img/wave4_w.png" style="width: 90px;"></span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-5"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
@@ -90,6 +90,10 @@
                     <p class="h3">WDM | Act</p> <p style="visibility: visible;" class="h6">WDM Act is a ministry project to bring positive change to our nation by presenting a Biblical perspective on current issues we are facing.</p>
                     </a>
                     </li>
+                    <li><a rel="noreferrer nofollow external" target="_blank" href="https://openenglishbible.org/">
+                      <p class="h3">Open English Bible</p> <p style="visibility: visible;" class="h6">We are committed to creating a completely free modern English translation of the Bible. The OEB is under a Creative Commons Zero licence - that is, it is in the public domain.</p>
+                      </a>
+                      </li>
 </ul>
 </div>
 
