--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
                 <div class="row h-100">
                     <div class="col-md-6 text-center text-md-start d-flex d-sm-flex d-md-flex justify-content-center align-items-center justify-content-md-start align-items-md-center justify-content-xl-center" style="color: #fff;">
                         <div style="max-width: 350px;">
-                            <h1 class="text-uppercase fw-bold" style="font-family: Quicksand, sans-serif;"><strong><span style="color: inherit;">We are merging ministry &amp; technology.</span></strong></h1>
+                            <h1 class="text-uppercase fw-bold" style="font-family: Quicksand, sans-serif;"><strong><span style="color: inherit;">About Us</span></strong></h1>
                         </div>
                     </div>
                 </div>
@@ -63,7 +63,7 @@
             <div class="row h-100">
                 <div class="col-md-10 col-xl-8 text-center d-flex d-sm-flex d-md-flex justify-content-center align-items-center mx-auto justify-content-md-start align-items-md-center justify-content-xl-center">
                     <div>
-                        <h2 class="text-uppercase fw-bold mb-3">Our Calling</h2>
+                        <h2 class="text-uppercase fw-bold mb-3">Our Mission</h2>
                         <p class="mb-4">We have been called by God to share His Word and #BeAWave4Christ through technology and community.</p>
                     </div>
                 </div>
@@ -76,8 +76,8 @@
             <div class="row h-100">
                 <div class="col-md-10 col-xl-8 text-center d-flex d-sm-flex d-md-flex justify-content-center align-items-center mx-auto justify-content-md-start align-items-md-center justify-content-xl-center">
                     <div>
-                        <h2 class="text-uppercase fw-bold mb-3">Fulfilling the call</h2>
-                        <p class="mb-4">We are utilizing existing technologies, such as social media, to share God's Word and developing our own technologies and resources to build a platform where ministries, ministers, educators, and researchers can share resources that empower other ministries and educate individuals.</p>
+                        <h2 class="text-uppercase fw-bold mb-3">Our Vision</h2>
+                        <p class="mb-4">We will build a faith-based ministry platform to empower more people to share God’s Word and share His Word ourselves.</p>
                     </div>
                 </div>
             </div>
@@ -87,18 +87,15 @@
     <div class="container py-4 py-xl-5">
         <div class="row mb-5">
             <div class="col-md-8 col-xl-6 text-center mx-auto">
-                <h2>Projects</h2>
-                <p class="w-lg-50">We are making a difference through a variety of projects, each with a different mission.</p>
+                <h2>Our Values</h2>
             </div>
         </div>
         <div class="row gy-4 row-cols-1 row-cols-md-2 row-cols-xl-3 justify-content-center">
             <div class="col">
                 <div class="text-center d-flex flex-column align-items-center align-items-xl-center">
-                    <div class="bs-icon-lg bs-icon-rounded d-flex flex-shrink-0 justify-content-center align-items-center d-inline-block mb-3 bs-icon lg"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-notebook text-dark">
+                    <div class="bs-icon-lg bs-icon-rounded d-flex flex-shrink-0 justify-content-center align-items-center d-inline-block mb-3 bs-icon lg"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-shield text-dark">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                            <path d="M6 4h11a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-11a1 1 0 0 1 -1 -1v-14a1 1 0 0 1 1 -1m3 0v18"></path>
-                            <line x1="13" y1="8" x2="15" y2="8"></line>
-                            <line x1="13" y1="12" x2="15" y2="12"></line>
+                            <path d="M12 3a12 12 0 0 0 8.5 3a12 12 0 0 1 -8.5 15a12 12 0 0 1 -8.5 -15a12 12 0 0 0 8.5 -3"></path>
                         </svg></div>
                     <div class="px-3">
                         <h4>Courses</h4>
