--- a/index.html
+++ b/index.html
@@ -25,18 +25,18 @@
 <script src="https://cdn.counter.dev/script.js" data-id="b5fa2081-bcb3-4ea6-bfd1-67fd41080622" data-utcoffset="-7"></script>
 </head>
 
-<body style="font-family: Quicksand, sans-serif;" onload="disableselect()">
+<body style="font-family: Quicksand, sans-serif;" onload="disableselect(), latest()">
     <!-- Start: Navbar Right Links (Dark) -->
     <nav class="navbar navbar-dark navbar-expand-md sticky-top bg-dark py-3">
         <div class="container"><a class="navbar-brand d-flex align-items-center" href="index.html"><span><img src="assets/img/wave4_w.png" style="width: 90px;"></span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-5"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse text-end" id="navcol-5">
+            <div class="collapse navbar-collapse text-end" id="navcol-5" style="font-family: 'La Belle Aurore', serif;font-size: 24px;">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item dropdown"><a class="nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#">Projects&nbsp;</a>
-                        <div class="dropdown-menu dropdown-menu-end"><a class="dropdown-item" href="https://courses.wavedm.net" target="_blank">Courses</a><a class="dropdown-item" href="ministryconnect.html">MinistryConnect</a><a class="dropdown-item" href="https://scholar.wavedm.net" target="_blank">Scholar</a><a class="dropdown-item" href="https://cmc.wavedm.net" target="_blank">CMC</a><a class="dropdown-item" href="https://act.wavedm.net" target="_blank">Act</a></div>
+                    <li class="nav-item"><a class="nav-link" href="index.html" style="color: #fff;">Home</a></li>
+                    <li class="nav-item dropdown"><a class="nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#" style="color: #fff;">Projects</a>
+                        <div class="dropdown-menu dropdown-menu-end" style="font-family: Quicksand, sans-serif;"><a class="dropdown-item" href="https://courses.wavedm.net" target="_blank">Courses</a><a class="dropdown-item" href="ministryconnect.html">MinistryConnect</a><a class="dropdown-item" href="https://scholar.wavedm.net" target="_blank">Scholar</a><a class="dropdown-item" href="https://cmc.wavedm.net" target="_blank">CMC</a><a class="dropdown-item" href="https://act.wavedm.net" target="_blank">Act</a></div>
                     </li>
-                    <li class="nav-item dropdown"><a class="nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#">More&nbsp;</a>
-                        <div class="dropdown-menu dropdown-menu-end"><a class="dropdown-item" href="impact.html">Impact</a><a class="dropdown-item" href="https://wavedm.churchcenter.com/people/forms/76551" target="_blank">Contact</a><a class="dropdown-item" href="privacy.html">Privacy</a></div>
+                    <li class="nav-item dropdown"><a class="nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#" style="color: #fff;">More</a>
+                        <div class="dropdown-menu dropdown-menu-end" style="font-family: Quicksand, sans-serif;"><a class="dropdown-item" href="impact.html">Impact</a><a class="dropdown-item" href="https://wavedm.churchcenter.com/people/forms/76551" target="_blank">Contact</a><a class="dropdown-item" href="privacy.html">Privacy</a></div>
                     </li>
                 </ul>
             </div>
@@ -50,7 +50,7 @@
                 <div class="row h-100">
                     <div class="col-md-6 text-center text-md-start d-flex d-sm-flex d-md-flex justify-content-center align-items-center justify-content-md-start align-items-md-center justify-content-xl-center" style="color: #fff;">
                         <div style="max-width: 350px;">
-                            <h1 class="text-uppercase fw-bold" style="font-family: Quicksand, sans-serif;"><strong><span style="color: inherit;">We are merging ministry &amp; technology.</span></strong></h1>
+                            <h1 class="fw-bold" style="font-family: Quicksand, sans-serif;"><strong><span style="color: inherit;">We are merging ministry and technology.</span></strong></h1>
                         </div>
                     </div>
                 </div>
@@ -63,7 +63,7 @@
             <div class="row h-100">
                 <div class="col-md-10 col-xl-8 text-center d-flex d-sm-flex d-md-flex justify-content-center align-items-center mx-auto justify-content-md-start align-items-md-center justify-content-xl-center">
                     <div>
-                        <h2 class="text-uppercase fw-bold mb-3">Our Calling</h2>
+                        <h2 class="fw-bold mb-3" style="font-family: 'La Belle Aurore', serif;">Our Calling</h2>
                         <p class="mb-4">We have been called by God to share His Word and #BeAWave4Christ through technology and community.</p>
                     </div>
                 </div>
@@ -76,7 +76,7 @@
             <div class="row h-100">
                 <div class="col-md-10 col-xl-8 text-center d-flex d-sm-flex d-md-flex justify-content-center align-items-center mx-auto justify-content-md-start align-items-md-center justify-content-xl-center">
                     <div>
-                        <h2 class="text-uppercase fw-bold mb-3">Fulfilling the call</h2>
+                        <h2 class="fw-bold mb-3" style="font-family: 'La Belle Aurore', serif;">Fulfilling the Call</h2>
                         <p class="mb-4">We are utilizing existing technologies, such as social media, to share God's Word and developing our own technologies and resources to build a platform where ministries, ministers, educators, and researchers can share resources that empower other ministries and educate individuals.</p>
                     </div>
                 </div>
@@ -87,7 +87,7 @@
     <div class="container py-4 py-xl-5">
         <div class="row mb-5">
             <div class="col-md-8 col-xl-6 text-center mx-auto">
-                <h2>Projects</h2>
+                <h2 style="font-family: 'La Belle Aurore', serif;">Projects</h2>
                 <p class="w-lg-50">We are making a difference through a variety of projects, each with a different mission.</p>
             </div>
         </div>
@@ -101,7 +101,7 @@
                             <line x1="13" y1="12" x2="15" y2="12"></line>
                         </svg></div>
                     <div class="px-3">
-                        <h4>Courses</h4>
+                        <h4 style="font-family: 'La Belle Aurore', serif;">Courses</h4>
                         <p>WDM Courses is a Biblical and ministry education and knowledge platform for everyone.</p><a href="https://courses.wavedm.net/" target="_blank" style="color: var(--bs-body-color);">Learn More&nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-arrow-right">
                                 <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"></path>
                             </svg></a>
@@ -117,7 +117,7 @@
                             <circle cx="14.5" cy="7.5" r="4.5"></circle>
                         </svg></div>
                     <div class="text-dark px-3">
-                        <h4 class="text-dark">MinistryConnect</h4>
+                        <h4 class="text-dark" style="font-family: 'La Belle Aurore', serif;">MinistryConnect</h4>
                         <p class="text-dark">Our web tool for connecting people with local, national, and global ministries.</p><a class="link-dark" href="ministryconnect.html">Start Searching&nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-arrow-right text-dark">
                                 <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"></path>
                             </svg></a>
@@ -134,7 +134,7 @@
                             <line x1="18.5" y1="19.5" x2="21" y2="22"></line>
                         </svg></div>
                     <div class="px-3">
-                        <h4>Scholar (Beta)</h4>
+                        <h4 style="font-family: 'La Belle Aurore', serif;">Scholar (Beta)</h4>
                         <p>WDM Scholar is a Christian, academic, research. platform</p><a href="https://scholar.wavedm.net/" style="color: var(--bs-body-color);" target="_blank">Learn More&nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-arrow-right">
                                 <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"></path>
                             </svg></a>
@@ -151,7 +151,7 @@
                             <path d="M8 13a4 4 0 1 0 8 0m0 0h-8"></path>
                         </svg></div>
                     <div class="px-3">
-                        <h4>Christian Meme Channel</h4>
+                        <h4 style="font-family: 'La Belle Aurore', serif;">Christian Meme Channel</h4>
                         <p>CMC is an outreach project that utilizes comedy as a method to connect with people and share God's love.</p><a href="https://cmc.wavedm.net/" style="color: var(--bs-body-color);" target="_blank">Learn More&nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-arrow-right">
                                 <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"></path>
                             </svg></a>
@@ -167,7 +167,7 @@
                             <path d="M12 8h0l4.524 -3.77a0.9 .9 0 0 1 1.476 .692v12.156a0.9 .9 0 0 1 -1.476 .692l-4.524 -3.77h-8a1 1 0 0 1 -1 -1v-4a1 1 0 0 1 1 -1h8"></path>
                         </svg></div>
                     <div class="px-3">
-                        <h4>Act</h4>
+                        <h4 style="font-family: 'La Belle Aurore', serif;">Act</h4>
                         <p>WDM Act is a ministry project to bring positive change to our nation by presenting a Biblical perspective on current issues we are facing.</p><a href="https://act.wavedm.net" style="color: var(--bs-body-color);" target="_blank">Learn More&nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-arrow-right">
                                 <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"></path>
                             </svg></a>
@@ -176,6 +176,103 @@
             </div>
         </div>
     </div><!-- End: Features Centered Icons -->
+    <!-- Start: Latest -->
+    <section>
+        <!-- Start: latest mobile -->
+        <section class="d-block d-print-none d-sm-block d-md-none d-lg-none d-xl-none d-xxl-none" style="margin-bottom: 20px;">
+            <!-- Start: 1 Row 1 Column -->
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h1 style="text-align: center;font-family: 'La Belle Aurore', serif;">Latest</h1>
+                    </div>
+                </div>
+            </div><!-- End: 1 Row 1 Column -->
+            <section style="margin-top: 15px;">
+                <!-- Start: 1 Row 1 Column -->
+                <div class="container" style="margin-top: 10px;">
+                    <div class="row">
+                        <div class="col-md-12 d-flex d-md-flex justify-content-center justify-content-md-center">
+                            <div class="card" style="width: 90%;">
+                                <div class="card-body"><script src="https://www.wavedm.net/tags/latest.js"></script>
+
+<h4 id="title1" class="card-title"></h4>
+<h6 id="author1"  class="text-muted card-subtitle mb-2" style="font-family: 'La Belle Aurore', serif;"></h6>
+
+<div id="content1"></div>
+<div id="content01"></div>
+</div>
+                            </div>
+                        </div>
+                    </div>
+                </div><!-- End: 1 Row 1 Column -->
+                <!-- Start: 1 Row 1 Column -->
+                <div class="container" style="margin-top: 20px;">
+                    <div class="row">
+                        <div class="col-md-12 d-flex d-md-flex justify-content-center justify-content-md-center">
+                            <div class="card" style="width: 90%;">
+                                <div class="card-body"><script src="https://www.wavedm.net/tags/latest.js"></script>
+
+<h4 id="title11" class="card-title"></h4>
+<h6 id="author11"  class="text-muted card-subtitle mb-2" style="font-family: 'La Belle Aurore', serif;"></h6>
+
+<div id="content11"></div>
+<div id="content011"></div>
+</div>
+                            </div>
+                        </div>
+                    </div>
+                </div><!-- End: 1 Row 1 Column -->
+            </section>
+        </section><!-- End: latest mobile -->
+        <!-- Start: latest desktop -->
+        <section class="d-none d-print-block d-sm-none d-md-block d-lg-block d-xl-block d-xxl-block" style="margin-bottom: 20px;">
+            <!-- Start: 1 Row 1 Column -->
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h1 style="text-align: center;font-family: 'La Belle Aurore', serif;">Latest</h1>
+                    </div>
+                </div>
+            </div><!-- End: 1 Row 1 Column -->
+            <section style="margin-top: 15px;">
+                <!-- Start: 1 Row 1 Column -->
+                <div class="container" style="margin-top: 10px;">
+                    <div class="row">
+                        <div class="col-md-12 d-md-flex justify-content-md-center">
+                            <div class="card" style="width: 50%;">
+                                <div class="card-body"><script src="https://www.wavedm.net/tags/latest.js"></script>
+
+<h4 id="title1" class="card-title"></h4>
+<h6 id="author1"  class="text-muted card-subtitle mb-2" style="font-family: 'La Belle Aurore', serif;"></h6>
+
+<div id="content1"></div>
+<div id="content01"></div>
+</div>
+                            </div>
+                        </div>
+                    </div>
+                </div><!-- End: 1 Row 1 Column -->
+                <!-- Start: 1 Row 1 Column -->
+                <div class="container" style="margin-top: 20px;">
+                    <div class="row">
+                        <div class="col-md-12 d-md-flex justify-content-md-center">
+                            <div class="card" style="width: 50%;">
+                                <div class="card-body"><script src="https://www.wavedm.net/tags/latest.js"></script>
+
+<h4 id="title11" class="card-title"></h4>
+<h6 id="author11"  class="text-muted card-subtitle mb-2" style="font-family: 'La Belle Aurore', serif;"></h6>
+
+<div id="content11"></div>
+<div id="content011"></div>
+</div>
+                            </div>
+                        </div>
+                    </div>
+                </div><!-- End: 1 Row 1 Column -->
+            </section>
+        </section><!-- End: latest desktop -->
+    </section><!-- End: Latest -->
     <!-- Start: Footer Dark -->
     <footer class="text-center bg-dark">
         <div class="container text-white py-4 py-lg-5">
