--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                             <line x1="13" y1="12" x2="15" y2="12"></line>
                         </svg></div>
                     <div class="px-3">
-                        <h4 style="font-family: 'La Belle Aurore', serif;">Courses</h4>
+                        <h4 style="font-family: Quicksand, sans-serif;">Courses</h4>
                         <p>WDM Courses is a Biblical and ministry education and knowledge platform for everyone.</p><a href="https://courses.wavedm.net/" target="_blank" style="color: var(--bs-body-color);">Learn More&nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-arrow-right">
                                 <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"></path>
                             </svg></a>
@@ -117,7 +117,7 @@
                             <circle cx="14.5" cy="7.5" r="4.5"></circle>
                         </svg></div>
                     <div class="text-dark px-3">
-                        <h4 class="text-dark" style="font-family: 'La Belle Aurore', serif;">MinistryConnect</h4>
+                        <h4 class="text-dark" style="font-family: Quicksand, sans-serif;">MinistryConnect</h4>
                         <p class="text-dark">Our web tool for connecting people with local, national, and global ministries.</p><a class="link-dark" href="ministryconnect.html">Start Searching&nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-arrow-right text-dark">
                                 <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"></path>
                             </svg></a>
@@ -134,7 +134,7 @@
                             <line x1="18.5" y1="19.5" x2="21" y2="22"></line>
                         </svg></div>
                     <div class="px-3">
-                        <h4 style="font-family: 'La Belle Aurore', serif;">Scholar (Beta)</h4>
+                        <h4 style="font-family: Quicksand, sans-serif;">Scholar (Beta)</h4>
                         <p>WDM Scholar is a Christian, academic, research. platform</p><a href="https://scholar.wavedm.net/" style="color: var(--bs-body-color);" target="_blank">Learn More&nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-arrow-right">
                                 <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"></path>
                             </svg></a>
@@ -151,7 +151,7 @@
                             <path d="M8 13a4 4 0 1 0 8 0m0 0h-8"></path>
                         </svg></div>
                     <div class="px-3">
-                        <h4 style="font-family: 'La Belle Aurore', serif;">Christian Meme Channel</h4>
+                        <h4 style="font-family: Quicksand, sans-serif;">Christian Meme Channel</h4>
                         <p>CMC is an outreach project that utilizes comedy as a method to connect with people and share God's love.</p><a href="https://cmc.wavedm.net/" style="color: var(--bs-body-color);" target="_blank">Learn More&nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-arrow-right">
                                 <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"></path>
                             </svg></a>
@@ -167,7 +167,7 @@
                             <path d="M12 8h0l4.524 -3.77a0.9 .9 0 0 1 1.476 .692v12.156a0.9 .9 0 0 1 -1.476 .692l-4.524 -3.77h-8a1 1 0 0 1 -1 -1v-4a1 1 0 0 1 1 -1h8"></path>
                         </svg></div>
                     <div class="px-3">
-                        <h4 style="font-family: 'La Belle Aurore', serif;">Act</h4>
+                        <h4 style="font-family: Quicksand, sans-serif;">Act</h4>
                         <p>WDM Act is a ministry project to bring positive change to our nation by presenting a Biblical perspective on current issues we are facing.</p><a href="https://act.wavedm.net" style="color: var(--bs-body-color);" target="_blank">Learn More&nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-arrow-right">
                                 <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"></path>
                             </svg></a>
