--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
             <div class="container" style="margin-top: 10px;">
                 <div class="row">
                     <div class="col-md-12 d-md-flex justify-content-md-center">
-                        <div class="card" style="width: 50%;">
+                        <div class="card" style="width: 50%;border-style: none;">
                             <div class="card-body"><script src="https://www.wavedm.net/tags/latest.js"></script>
 
 <h4 id="title1" class="card-title"></h4>
@@ -208,7 +208,7 @@
             <div class="container" style="margin-top: 20px;">
                 <div class="row">
                     <div class="col-md-12 d-md-flex justify-content-md-center">
-                        <div class="card" style="width: 50%;">
+                        <div class="card" style="width: 50%;border-style: none;">
                             <div class="card-body"><script src="https://www.wavedm.net/tags/latest.js"></script>
 
 <h4 id="title11" class="card-title"></h4>
@@ -223,53 +223,6 @@
             </div><!-- End: 1 Row 1 Column -->
         </section>
     </section><!-- End: latest desktop -->
-    <!-- Start: latest mobile -->
-    <section class="d-block d-print-none d-sm-block d-md-none d-lg-none d-xl-none d-xxl-none" style="margin-bottom: 20px;">
-        <!-- Start: 1 Row 1 Column -->
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <h1 style="text-align: center;font-family: 'La Belle Aurore', serif;">Latest</h1>
-                </div>
-            </div>
-        </div><!-- End: 1 Row 1 Column -->
-        <section style="margin-top: 15px;">
-            <!-- Start: 1 Row 1 Column -->
-            <div class="container" style="margin-top: 10px;">
-                <div class="row">
-                    <div class="col-md-12 d-flex d-md-flex justify-content-center justify-content-md-center">
-                        <div class="card" style="width: 90%;">
-                            <div class="card-body"><script src="https://www.wavedm.net/tags/latest.js"></script>
-
-<h4 id="title1" class="card-title"></h4>
-<h6 id="author1"  class="text-muted card-subtitle mb-2" style="font-family: 'La Belle Aurore', serif;"></h6>
-
-<div id="content1"></div>
-<div id="content01"></div>
-</div>
-                        </div>
-                    </div>
-                </div>
-            </div><!-- End: 1 Row 1 Column -->
-            <!-- Start: 1 Row 1 Column -->
-            <div class="container" style="margin-top: 20px;">
-                <div class="row">
-                    <div class="col-md-12 d-flex d-md-flex justify-content-center justify-content-md-center">
-                        <div class="card" style="width: 90%;">
-                            <div class="card-body"><script src="https://www.wavedm.net/tags/latest.js"></script>
-
-<h4 id="title11" class="card-title"></h4>
-<h6 id="author11"  class="text-muted card-subtitle mb-2" style="font-family: 'La Belle Aurore', serif;"></h6>
-
-<div id="content11"></div>
-<div id="content011"></div>
-</div>
-                        </div>
-                    </div>
-                </div>
-            </div><!-- End: 1 Row 1 Column -->
-        </section>
-    </section><!-- End: latest mobile -->
     <!-- Start: Footer Dark -->
     <footer class="text-center bg-dark">
         <div class="container text-white py-4 py-lg-5">
